@@ -1,3 +1,8 @@
+2007-01-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/AttributeChangeNotification.java:
+	New file.
+	
 2007-01-08  Cameron McCormack  <cam@mcc.id.au>
 
 	PR 30355
